// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`newline-before-arrow.js format[acorn] 1`] = `
"Unexpected token (2:1)
  1 | async x
> 2 | => x
    | ^
  3 |
Cause: Unexpected token (2:0)"
`;

exports[`newline-before-arrow.js format[babel] 1`] = `
"No line break is allowed before '=>'. (2:3)
  1 | async x
> 2 | => x
    |   ^
  3 |
Cause: No line break is allowed before '=>'. (2:2)"
`;

exports[`newline-before-arrow.js format[babel-ts] 1`] = `
"No line break is allowed before '=>'. (2:3)
  1 | async x
> 2 | => x
    |   ^
  3 |
Cause: No line break is allowed before '=>'. (2:2)"
`;

exports[`newline-before-arrow.js format[babel-ts] 2`] = `
"No line break is allowed before '=>'. (2:3)
  1 | async x
> 2 | => x
    |   ^
  3 |
Cause: No line break is allowed before '=>'. (2:2)"
`;

exports[`newline-before-arrow.js format[espree] 1`] = `
"Unexpected token => (2:1)
  1 | async x
> 2 | => x
    | ^
  3 |
Cause: Unexpected token =>"
`;

exports[`newline-before-arrow.js format[flow] 1`] = `
"Illegal newline before arrow (2:1)
  1 | async x
> 2 | => x
    | ^
  3 |
Cause: Illegal newline before arrow (2:0)"
`;

exports[`newline-before-arrow.js format[meriyah] 1`] = `
"No line break is allowed after '=>' (2:1)
  1 | async x
> 2 | => x
    | ^^
  3 |
Cause: [2:0-2:2]: No line break is allowed after '=>'"
`;

exports[`newline-before-arrow.js format[oxc] 1`] = `
"Line terminator not permitted before arrow (2:1)
  1 | async x
> 2 | => x
    | ^^
  3 |"
`;

exports[`newline-before-arrow.js format[typescript] 1`] = `
"Unexpected keyword or identifier. (1:1)
> 1 | async x
    | ^
  2 | => x
  3 |
Cause: Unexpected keyword or identifier."
`;

exports[`newline-before-arrow.js format[yuku] 1`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found 'x' (1:7)
> 1 | async x
    |       ^
  2 | => x
  3 |"
`;
